# learn-homework-2

./: .gitignore  1_date_and_time.py  2_files.py  3_csv.py  3_dict_to_csv.py  4_OOP_additional.py  Cvs_list.csv  LOTR_characters.csv  README.md  bot.py  candidates.csv  cities.csv  citizens.csv  csv_output.csv  date_and_time.py  dict_to_csv.py  employees.csv  example.csv  export.csv  export_list.csv  files.py  info.csv  jobs.csv  korneev.txt  my_log_settings.py  my_staff.csv  names_and_jobs.py  people.csv  pyproject.toml  referat.txt  referat.txt:Zone.Identifier  referat1.txt  referat2.txt  setup.cfg  some.csv  user_file.csv  user_info.csv  user_list.csv  users.csv  users.xlsx
learn_bot/: game_bot.py  requirements.txt
learn_web/: server.py  test.json  weather.py
lesson2/: dicts.py  for.py  strings.py
