[tool.poetry]
name = "learn-homework-2"
version = "0.1.0"
description = ""
authors = ["astra <zorkin.roman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^0.931"
wemake-python-styleguide = "^0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
